[package]
name = "orthos"
version = "0.2.0"
edition = "2024"
description = "Markdown to PDF compiler"

[dependencies]
clap = { version = "4", features = ["derive"] }
comrak = "0.49"
miette = { version = "7", features = ["fancy"] }
thiserror = "2"
typst = "0.14"
typst-pdf = "0.14"
ecow = "0.2"
chrono = "0.4"
unicode-segmentation = "1"
